--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/FirstFragment"
         android:name="com.noahutz.photobrowser.ui.albums.AlbumListFragment"
-        android:label="@string/first_fragment_label"
+        android:label="@string/album_list_fragment_label"
         tools:layout="@layout/fragment_list_album">
 
         <action
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="com.noahutz.photobrowser.SecondFragment"
+        android:name="com.noahutz.photobrowser.ui.SecondFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_second">
 
