--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="padding_single">8dp</dimen>
+    <dimen name="padding_double">16dp</dimen>
+
+    <dimen name="size_text_album_title">18sp</dimen>
 </resources>
