--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/AlbumListFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
+        android:id="@+id/AlbumListFragment"
         android:name="com.noahutz.photobrowser.ui.albums.AlbumListFragment"
         android:label="@string/album_list_fragment_label"
         tools:layout="@layout/fragment_list_album">
 
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_AlbumListFragment_to_PhotoListFragment"
+            app:destination="@id/PhotoListFragment" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.noahutz.photobrowser.ui.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        android:id="@+id/PhotoListFragment"
+        android:name="com.noahutz.photobrowser.ui.photos.PhotoListFragment"
+        android:label="@string/photo_list_fragment_label"
+        tools:layout="@layout/fragment_list_photo">
 
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            android:id="@+id/action_PhotoListFragment_to_AlbumListFragment"
+            app:destination="@id/AlbumListFragment" />
     </fragment>
 </navigation>
