--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="padding_double">16dp</dimen>
 
     <dimen name="size_text_album_title">18sp</dimen>
+    <dimen name="size_image_thumbnail">150dp</dimen>
 </resources>
