--- a/app/src/main/res/layout/fragment_list_photo.xml
+++ b/app/src/main/res/layout/fragment_list_photo.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swipeRefreshLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.photos.PhotoListFragment">
@@ -12,4 +13,4 @@
         tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         tools:listitem="@layout/item_photo"
         tools:spanCount="2" />
-</FrameLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
