--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -1,23 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:orientation="vertical"
-    tools:ignore="UseCompoundDrawables">
+    android:layout_margin="@dimen/padding_double"
+    app:cardCornerRadius="@dimen/size_card_corner_radius">
 
-    <ImageView
-        android:id="@+id/imageViewThumbnail"
+    <LinearLayout
         android:layout_width="@dimen/size_image_thumbnail"
-        android:layout_height="@dimen/size_image_thumbnail"
-        android:contentDescription="@string/content_description_photo"
-        tools:src="@tools:sample/backgrounds/scenic" />
-
-    <TextView
-        android:id="@+id/textViewTitle"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        tools:text="Album Title" />
-</LinearLayout>
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        tools:ignore="UseCompoundDrawables">
+
+        <ImageView
+            android:id="@+id/imageViewThumbnail"
+            android:layout_width="@dimen/size_image_thumbnail"
+            android:layout_height="@dimen/size_image_thumbnail"
+            android:contentDescription="@string/content_description_photo"
+            tools:src="@tools:sample/backgrounds/scenic" />
+
+        <TextView
+            android:id="@+id/textViewTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/padding_single"
+            android:gravity="center"
+            tools:text="Photo title" />
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
