--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
 
     <dimen name="size_text_album_title">18sp</dimen>
     <dimen name="size_image_thumbnail">150dp</dimen>
+    <dimen name="size_card_corner_radius">8dp</dimen>
 </resources>
