--- a/app/src/main/res/layout/fragment_list_photo.xml
+++ b/app/src/main/res/layout/fragment_list_photo.xml
@@ -10,6 +10,7 @@
         android:id="@+id/recyclerViewPhotos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        tools:itemCount="5"
         tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         tools:listitem="@layout/item_photo"
         tools:spanCount="2" />
